lora common + section tuning

--- a/configs/trainer/fine_tune_explicit.yaml
+++ b/configs/trainer/fine_tune_explicit.yaml
@@ -8,9 +8,9 @@ configs:
   max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   fusion_strategy: ""
   explicit_evidence: True
-  multi_adapter: False
-  lora_configs:
+  common_lora_config:
     r: 16
     lora_alpha: 32
     lora_dropout: 0.0
     target_modules: ["k_proj", "q_proj", "v_proj"]
+  section_lora_config: null
