--- a/k8s_runs/missing_experiments.yaml
+++ b/k8s_runs/missing_experiments.yaml
@@ -1,4 +1,4 @@
-gpu_limit: 1
+gpu_limit: 2
 accelerate_config: ""
 env_vars:
   GIT_TOKEN:
@@ -18,71 +18,125 @@ env_vars:
     key: aryo-hf-username
 image: aryopg/nli4ct:latest
 runs:
-  - experiment: 0_shot/llama2-70b-chat
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_0_shot/mistrallite-7b
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: fine-tune/meditron-7b
+  - experiment: 0_shot/mistrallite_7b
     gpu_product: NVIDIA-A100-SXM4-40GB
-  - experiment: fine-tune/mistral-7b-instruct
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 2_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 2_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 2_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_1_shot/mistrallite-7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_2_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_2_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_2_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_4_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_4_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_4_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_4_shot/mistrallite-7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_6_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_6_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_6_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_6_shot/mistrallite-7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_8_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: cot_late_8_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_4_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_6_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_6_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_6_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_6_shot/mistrallite-7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_8_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_8_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_coupled-4_shot/mistral-7b-instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_coupled-6_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_coupled-8_shot/llama2-13b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_coupled-8_shot/llama2-7b-chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: late_coupled-8_shot/mistrallite-7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: 1_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 1_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 2_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 2_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 2_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_2_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_2_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_4_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_4_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_6_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_6_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_6_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_6_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_6_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_8_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_8_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_8_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_4_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_4_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_6_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_6_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: late_coupled_8_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_1_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_1_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_2_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_2_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_2_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_2_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_2_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_4_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_4_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_4_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_4_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_4_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_6_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_6_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_6_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_6_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_6_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_8_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_8_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_8_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_4_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_4_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_4_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_4_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_4_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_6_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_6_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_6_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_6_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_6_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_8_shot/llama2_13b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_8_shot/llama2_7b_chat retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_8_shot/mistral_7b_instruct retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_8_shot/mistrallite_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: cot_late_coupled_8_shot/meditron_7b retriever=bm25
+    gpu_product: NVIDIA-A100-SXM4-40GB
