--- a/configs/experiment/fine_tune_explicit_multi_adapter_solo_common/mistrallite_7b.yaml
+++ b/configs/experiment/fine_tune_explicit_multi_adapter_solo_common/mistrallite_7b.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: mistrallite_7b
   - override /data: nli4ct
   - override /dataloader: chat
-  - override /trainer: fine_tune_multi_adapter
+  - override /trainer: fine_tune_explicit_multi_adapter_solo_common
