--- a/configs/experiment/fine_tune_multi_adapter_solo/mistral_7b_instruct.yaml
+++ b/configs/experiment/fine_tune_multi_adapter_solo/mistral_7b_instruct.yaml
@@ -3,4 +3,4 @@ defaults:
   - override /model: mistral_7b_instruct
   - override /data: nli4ct
   - override /dataloader: chat
-  - override /trainer: fine_tune_multi_adapter
+  - override /trainer: fine_tune_multi_adapter_solo
