--- a/configs/trainer/fine_tune_multi_adapter_solo.yaml
+++ b/configs/trainer/fine_tune_multi_adapter_solo.yaml
@@ -1,15 +1,15 @@
 defaults:
   - base_trainer_config
 
-name: fine_tune_explicit_multi_adapter
+name: fine_tune_multi_adapter
 configs:
   epochs: 10
   gradient_accumulation_steps: 32
   max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   fusion_strategy: ""
-  explicit_evidence: True
-  multi_adapter: True
-  lora_configs:
+  explicit_evidence: False
+  common_lora_config: null
+  section_lora_config: 
     r: 16
     lora_alpha: 32
     lora_dropout: 0.0
