--- a/configs/trainer/fine_tune_multi_adapter_solo_common.yaml
+++ b/configs/trainer/fine_tune_multi_adapter_solo_common.yaml
@@ -1,15 +1,19 @@
 defaults:
   - base_trainer_config
 
-name: fine_tune_multi_adapter
+name: fine_tune_multi_adapter_solo_common
 configs:
   epochs: 10
   gradient_accumulation_steps: 32
   max_train_seq_len: 2048  # The maximum seq length to use for training in 1x80GB GPU
   fusion_strategy: ""
   explicit_evidence: False
-  multi_adapter: True
-  lora_configs:
+  common_lora_config:
+    r: 16
+    lora_alpha: 32
+    lora_dropout: 0.0
+    target_modules: ["k_proj", "q_proj", "v_proj"]
+  section_lora_config: 
     r: 16
     lora_alpha: 32
     lora_dropout: 0.0
