fix configs to match new multi adapter

--- a/configs/trainer/0_shot.yaml
+++ b/configs/trainer/0_shot.yaml
@@ -7,4 +7,5 @@ configs:
   gradient_accumulation_steps: 0
   fusion_strategy: ""
   explicit_evidence: False
-  multi_adapter: False
+  common_lora_config: null
+  section_lora_config: null
