--- a/configs/trainer/2_shot_explicit.yaml
+++ b/configs/trainer/2_shot_explicit.yaml
@@ -9,4 +9,5 @@ configs:
   num_in_context_examples: 2
   fusion_strategy: early
   explicit_evidence: True
-  multi_adapter: False
+  common_lora_config: null
+  section_lora_config: null
