--- a/configs/trainer/1_shot.yaml
+++ b/configs/trainer/1_shot.yaml
@@ -9,4 +9,5 @@ configs:
   num_in_context_examples: 1
   fusion_strategy: early
   explicit_evidence: False
-  multi_adapter: False
+  common_lora_config: null
+  section_lora_config: null
