--- a/configs/trainer/cot_late_2_shot.yaml
+++ b/configs/trainer/cot_late_2_shot.yaml
@@ -10,4 +10,5 @@ configs:
   fusion_strategy: late
   cot_prompt: "Let's think step by step"
   explicit_evidence: False
-  multi_adapter: False
+  common_lora_config: null
+  section_lora_config: null
