--- a/configs/trainer/fine_tune_contrastive.yaml
+++ b/configs/trainer/fine_tune_contrastive.yaml
@@ -15,3 +15,4 @@ configs:
     lora_dropout: 0.0
     target_modules: ["k_proj", "q_proj", "v_proj"]
   section_lora_config: null
+  common_polytropon_config: null
