--- a/configs/trainer/fine_tune_multi_adapter_solo.yaml
+++ b/configs/trainer/fine_tune_multi_adapter_solo.yaml
@@ -14,3 +14,4 @@ configs:
     lora_alpha: 32
     lora_dropout: 0.0
     target_modules: ["k_proj", "q_proj", "v_proj"]
+  common_polytropon_config: null
