--- a/configs/trainer/fine_tune_polytropon.yaml
+++ b/configs/trainer/fine_tune_polytropon.yaml
@@ -10,6 +10,7 @@ configs:
   explicit_evidence: False
   common_lora_config: null
   section_lora_config: null
+  common_polytropon_config: null
   common_polytropon_config:
     r: 16
     n_tasks: 4
