--- a/configs/trainer/late_coupled_8_shot.yaml
+++ b/configs/trainer/late_coupled_8_shot.yaml
@@ -11,3 +11,5 @@ configs:
   explicit_evidence: False
   common_lora_config: null
   section_lora_config: null
+  common_polytropon_config: null
+  common_polytropon_config: null
