ablation pretrained 0-shot best setup (mistrallite)

--- a/configs/model/pretrained/mistral_7b_instruct_common.yaml
+++ b/configs/model/pretrained/mistral_7b_instruct_common.yaml
@@ -14,3 +14,5 @@ configs:
   pretrained_adapter_merging: average
   pretrained_adapter_paths:
     - aryopg/Mistral-7b-Instruct_lora_common
+  pretrained_adapter_weights:
+    - 1
