--- a/configs/model/pretrained/mistral_7b_instruct_common_sections_avg.yaml
+++ b/configs/model/pretrained/mistral_7b_instruct_common_sections_avg.yaml
@@ -18,3 +18,9 @@ configs:
     - aryopg/Mistral-7b-Instruct_lora_intervention
     - aryopg/Mistral-7b-Instruct_lora_eligibility
     - aryopg/Mistral-7b-Instruct_lora_adverse_events
+  pretrained_adapter_weights:
+    - 1
+    - 1
+    - 1
+    - 1
+    - 1
