--- a/configs/model/pretrained/mistral_7b_instruct_contrastive_common_svd.yaml
+++ b/configs/model/pretrained/mistral_7b_instruct_contrastive_common_svd.yaml
@@ -15,3 +15,6 @@ configs:
   pretrained_adapter_paths:
     - aryopg/Mistral-7b-Instruct_lora_contrastive
     - aryopg/Mistral-7b-Instruct_lora_common
+  pretrained_adapter_weights:
+    - 1
+    - 1
