--- a/configs/model/pretrained/mistrallite_7b_common.yaml
+++ b/configs/model/pretrained/mistrallite_7b_common.yaml
@@ -14,3 +14,5 @@ configs:
   pretrained_adapter_merging: average
   pretrained_adapter_paths:
     - aryopg/MistralLite-7b_lora_common
+  pretrained_adapter_weights:
+    - 1
