--- a/configs/model/pretrained/mistrallite_7b_contrastive_1_common_2_avg.yaml
+++ b/configs/model/pretrained/mistrallite_7b_contrastive_1_common_2_avg.yaml
@@ -11,14 +11,10 @@ configs:
   top_p: 0
   top_k: 1
   repetition_penalty: 1
-  pretrained_adapter_merging: svd
+  pretrained_adapter_merging: average
   pretrained_adapter_paths:
-    - aryopg/MistralLite-7b_lora_results
-    - aryopg/MistralLite-7b_lora_intervention
-    - aryopg/MistralLite-7b_lora_eligibility
-    - aryopg/MistralLite-7b_lora_adverse_events
+    - aryopg/MistralLite-7b_lora_contrastive
+    - aryopg/MistralLite-7b_lora_common
   pretrained_adapter_weights:
     - 1
-    - 1
-    - 1
-    - 1
+    - 2
