--- a/configs/model/pretrained/mistrallite_7b_contrastive_common_sections_avg.yaml
+++ b/configs/model/pretrained/mistrallite_7b_contrastive_common_sections_avg.yaml
@@ -19,3 +19,10 @@ configs:
     - aryopg/MistralLite-7b_lora_intervention
     - aryopg/MistralLite-7b_lora_eligibility
     - aryopg/MistralLite-7b_lora_adverse_events
+  pretrained_adapter_weights:
+    - 1
+    - 1
+    - 1
+    - 1
+    - 1
+    - 1
