--- a/configs/model/pretrained/mistrallite_7b_contrastive_common_svd.yaml
+++ b/configs/model/pretrained/mistrallite_7b_contrastive_common_svd.yaml
@@ -15,3 +15,6 @@ configs:
   pretrained_adapter_paths:
     - aryopg/MistralLite-7b_lora_contrastive
     - aryopg/MistralLite-7b_lora_common
+  pretrained_adapter_weights:
+    - 1
+    - 1
