--- a/k8s_runs/1_shot.yaml
+++ b/k8s_runs/1_shot.yaml
@@ -18,43 +18,51 @@ env_vars:
     key: aryo-hf-username
 image: aryopg/nli4ct:latest
 runs:
-  - experiment: 1_shot/mistral_7b_instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistral_7b_instruct retriever=bm25_length_penalty
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_7b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_7b_chat retriever=bm25_length_penalty
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_7b_chat retriever=bm25_contriever_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_13b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_13b_chat retriever=bm25_length_penalty
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_13b_chat retriever=bm25_contriever_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistrallite_7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistrallite_7b retriever=bm25_length_penalty
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistrallite_7b retriever=bm25_contriever_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  - experiment: 1_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
-    gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: 1_shot/mistral_7b_instruct retriever=random
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistral_7b_instruct retriever=bm25
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistral_7b_instruct retriever=bm25_length_penalty
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 1_shot/llama2_7b_chat retriever=random
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_7b_chat retriever=bm25
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_7b_chat retriever=bm25_length_penalty
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_7b_chat retriever=bm25_contriever_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 1_shot/llama2_13b_chat retriever=random
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_13b_chat retriever=bm25
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_13b_chat retriever=bm25_length_penalty
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_13b_chat retriever=bm25_contriever_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: 1_shot/mistrallite_7b retriever=random
+    gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistrallite_7b retriever=bm25
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistrallite_7b retriever=bm25_length_penalty
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistrallite_7b retriever=bm25_contriever_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
+  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  # - experiment: 1_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
