--- a/k8s_runs/late_coupled_8_shot.yaml
+++ b/k8s_runs/late_coupled_8_shot.yaml
@@ -1,4 +1,3 @@
-gpu_limit: 1
 accelerate_config: ""
 env_vars:
   GIT_TOKEN:
@@ -19,42 +18,62 @@ env_vars:
 image: aryopg/nli4ct:latest
 runs:
   - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: late_coupled_8_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
