--- a/k8s_runs/cot_2_shot.yaml
+++ b/k8s_runs/cot_2_shot.yaml
@@ -19,42 +19,61 @@ env_vars:
 image: aryopg/nli4ct:latest
 runs:
   - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: cot_2_shot/llama2_7b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_7b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: cot_2_shot/llama2_13b_chat retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/llama2_13b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: cot_2_shot/mistrallite_7b retriever=bm25
-    gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistrallite_7b retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistrallite_7b retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: cot_2_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistrallite_7b retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistrallite_7b retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistrallite_7b retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot/mistrallite_7b retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
