--- a/k8s_runs/cot_2_shot_explicit.yaml
+++ b/k8s_runs/cot_2_shot_explicit.yaml
@@ -1,4 +1,3 @@
-gpu_limit: 2
 accelerate_config: ""
 env_vars:
   GIT_TOKEN:
@@ -20,41 +19,61 @@ image: aryopg/nli4ct:latest
 runs:
   - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25
     gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistral_7b_instruct retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
   - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25
     gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/llama2_7b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
   - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25
     gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: cot_2_shot_explicit/llama2_13b_chat retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25
     gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_length_penalty
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_contriever_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_biolinkbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_pubmedbert_reranker
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_length_penalty
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_contriever_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_biolinkbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
+  - experiment: cot_2_shot_explicit/mistrallite_7b retriever=bm25_pubmedbert_reranker
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 1
