--- a/k8s_runs/fine_tune_contrastive.yaml
+++ b/k8s_runs/fine_tune_contrastive.yaml
@@ -18,13 +18,17 @@ env_vars:
     key: aryo-hf-username
 image: aryopg/nli4ct:latest
 runs:
-  # - experiment: fine_tune_contrastive/mistral_7b_instruct
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: fine_tune_contrastive/llama2_7b_chat
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: fine_tune_contrastive/llama2_13b_chat
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
-  # - experiment: fine_tune_contrastive/meditron_7b
-  #   gpu_product: NVIDIA-A100-SXM4-80GB
+  - experiment: fine_tune_contrastive/mistral_7b_instruct
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: fine_tune_contrastive/llama2_7b_chat
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: fine_tune_contrastive/llama2_13b_chat
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: fine_tune_contrastive/meditron_7b
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: fine_tune_contrastive/mistrallite_7b
     gpu_product: NVIDIA-A100-SXM4-40GB
