--- a/k8s_runs/pretrained_0_shot_best.yaml
+++ b/k8s_runs/pretrained_0_shot_best.yaml
@@ -1,4 +1,3 @@
-gpu_limit: 2
 accelerate_config: ""
 env_vars:
   GIT_TOKEN:
@@ -18,20 +17,28 @@ env_vars:
     key: aryo-hf-username
 image: aryopg/nli4ct:latest
 runs:
-  # - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_common_svd
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_2_common_1_avg
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_1_common_2_avg
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_2_common_1_svd
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_1_common_2_svd
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_cot_0_shot_best/mistrallite_7b_contrastive_common_avg
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
-  # - experiment: pretrained_0_shot_explicit_best/mistrallite_7b_contrastive_common_avg
-  #   gpu_product: NVIDIA-A100-SXM4-40GB
+  - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_common_svd
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_2_common_1_avg
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_1_common_2_avg
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_2_common_1_svd
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_0_shot_best/mistrallite_7b_contrastive_1_common_2_svd
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_cot_0_shot_best/mistrallite_7b_contrastive_common_avg
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
+  - experiment: pretrained_0_shot_explicit_best/mistrallite_7b_contrastive_common_avg
+    gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   - experiment: pretrained_0_shot/mistrallite_7b_contrastive_common_avg
     gpu_product: NVIDIA-A100-SXM4-40GB
+    gpu_limit: 2
   
